...
        .all { it.isNotBlank() && it.isNotEmpty() }
    }

    fun register() = viewModelScope.launch {
        if (!this@RegisterViewModel.validateFields()) {
            this@RegisterViewModel.snackbarHostState.showSnackbar(
                message = "Niet alle velden zijn juist ingevuld!"
            )
            return@launch
        }

        val success = this@RegisterViewModel.userRepository.registerUser(
            CreateUserRequest(
...
